--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
-  "dependencies": {},
+  "dependencies": {
+    "aos": "^3.0.0-beta.6"
+  },
   "devDependencies": {
     "browser-sync": "^2.26.7",
     "gulp": "^3.9.1",
